# GraphPhoto

./: .gitignore  meson.build
libs/: meson.build
libs/gl3w/: meson.build
source/: BucketArary.cpp  BucketArray.cpp  gegl_helper.cpp  gegl_helper.h  gpnode.cpp  gpnode.h  graph-photo.cpp  heart-break.cpp  heartbreak_menu.h  main.cpp  meson.build  prebuilt-gegl-nodes.c  prebuilt-gegl-nodes.h  serialize.cpp  serialize.h  stb_image.h  todo.org  uinode.cpp
source/imgui/: imgui_draw.cpp  meson.build
source/imgui-node-editor/: README.md  crude_json.cpp  imgui_bezier_math.inl  imgui_extra_math.inl  imgui_node_editor.cpp  imgui_node_editor.h  meson.build
source/imgui-node-editor/application/: meson.build
source/imgui-node-editor/application/include/: application.h
source/imgui-node-editor/application/source/glfw/: entry.cpp  meson.build
source/imgui-node-editor/utilities/: builders.cpp  builders.h  meson.build
